src/objects/pse__Forecast_Enhanced_Detail__c.object
<CustomObject>
    <customHelpPage>pse__ForecastEnhancedDetailHelp</customHelpPage>
    <description>Stores the billing forecast records created for a project or opportunity.</description>
    <fields>
        <fullName>pse__Billings_Budgets__c</fullName>
        <description>The billings for budgets.</description>
        <label>Billings: Budgets</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Billings_Expenses__c</fullName>
        <description>The billings for expenses.</description>
        <label>Billings: Expenses</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Billings_Milestones__c</fullName>
        <description>The billings for milestones.</description>
        <label>Billings: Milestones</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Billings_Misc_Adjustments__c</fullName>
        <description>The billings for miscellaneous adjustments.</description>
        <label>Billings: Misc Adjustments</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Billings_Timecards__c</fullName>
        <description>The billings for timecards.</description>
        <label>Billings: Timecards</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Forecast_Enhanced_Calculation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The billing forecast calculation associated with the record.</description>
        <label>Billing Forecast Calculation</label>
        <referenceTo>pse__Forecast_Enhanced_Calculation__c</referenceTo>
        <relationshipName>Forecast_Enhanced_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The opportunity associated with the billing forecast.</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Forecast_Enhanced_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Parent_Summary__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A lookup to the billing forecast summary for the region, practice, or group of the project or opportunity of this billing forecast summary.</description>
        <inlineHelpText>A lookup to the billing forecast summary for the region, practice, or group of the project or opportunity of this billing forecast summary.</inlineHelpText>
        <label>Parent Billing Forecast Summary</label>
        <referenceTo>pse__Forecast_Enhanced_Summary__c</referenceTo>
        <relationshipLabel>Child Billing Forecast Details</relationshipLabel>
        <relationshipName>Forecast_Enhanced_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Perpetual_Backlog_Budgets__c</fullName>
        <description>The perpetual backlog for budgets.</description>
        <label>Perpetual Backlog: Budgets</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Perpetual_Backlog_Held_RR__c</fullName>
        <description>The scheduled held resource requests in the context of perpetual time periods (All Time Periods).</description>
        <label>Perpetual Backlog: Held RRs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Perpetual_Backlog_Unheld_RR__c</fullName>
        <description>The scheduled unheld resource requests in the context of perpetual time periods (All Time Periods).</description>
        <label>Perpetual Backlog: Unheld RRs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Perpetual_Billings_Budgets__c</fullName>
        <description>The perpetual billings for budgets.</description>
        <label>Perpetual Billings: Budgets</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Perpetual_Billings_Expenses__c</fullName>
        <description>The perpetual billings for expenses.</description>
        <label>Perpetual Billings: Expenses</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Perpetual_Billings_Milestones__c</fullName>
        <description>The perpetual billings for milestones.</description>
        <label>Perpetual Billings: Milestones</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Perpetual_Billings_Misc_Adjustments__c</fullName>
        <description>The perpetual billings for miscellaneous adjustments.</description>
        <label>Perpetual Billings: Misc Adjustments</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Perpetual_Billings_Timecards__c</fullName>
        <description>The perpetual billings for timecards.</description>
        <label>Perpetual Billings: Timecards</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The project associated with the billing forecast detail.</description>
        <label>Project</label>
        <referenceTo>pse__Proj__c</referenceTo>
        <relationshipName>Forecast_Enhanced_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Scheduled_Assignments__c</fullName>
        <description>The scheduled assignments.</description>
        <label>Scheduled: Assignments</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Scheduled_Held_Resource_Requests__c</fullName>
        <description>The scheduled held resource requests.</description>
        <label>Scheduled: Held Resource Requests</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Scheduled_Milestones__c</fullName>
        <description>The scheduled milestones.</description>
        <label>Scheduled: Milestones</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Scheduled_Unheld_Resource_Requests__c</fullName>
        <description>The scheduled unheld resource requests.</description>
        <label>Scheduled: Unheld Resource Requests</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Unscheduled_Backlog__c</fullName>
        <description>Potential backlog, in the context of perpetual time periods (All Time Periods).</description>
        <label>Unscheduled Backlog</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Unscheduled_Revenue__c</fullName>
        <description>Potential revenue, in the context of perpetual time periods (All Time Periods).</description>
        <label>Unscheduled Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Billing Forecast Detail</label>
    <listViews>
        <fullName>pse__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>FDetail-{0000}</displayFormat>
        <label>Billing Forecast Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Billing Forecast Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>